[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/Artingl/YandexIOT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
